2012-04-27 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.5-04
   * man/bayesglm: rewrite the description for the option scaled.

2012-03-3 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.5-03
   * DESCRIPTION: add foreign as the required package
   * R/simmer: new sim() for mer class

2012-01-19 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.5-01
   * R/mcsamp: add mcsamp() back, though it is not working.
   * R/AllGeneric: set coef, print, as generic to pass the check

2011-11-21 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-14
   * R/.onAttach: fix the NOTE issue

2011-06-19 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-13
   * R/coefplot: fix margin control.

2011-06-11 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-12
   * R/bayespolr: add min.prior.scale
   * R/binnedplot: add nclass > 1 check
   * man/bayespolr: add min.prior.scale
   

2011-05-25 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-11
   * R/bayesglm: fix a bug  when there are some observation-weights that are zero.

2011-05-9 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-10
   * R/display: fix a bug in display.lm that fails to print out se.


2011-05-8 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-09
   * R/binnedplot: fix a bug of no sd when binnedplot only get one point.

2011-04-24 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-08
   * display: now return objects after displaying the fitted model.
   * sigma.hat: fix a bug in sigma.hat for mer
   
   
2011-03-1 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-07
   * AllClass:  add sim.polr class
   * coef: add coef() for sim.polr 
   * sim: add sim() for polr 
